feed temperature slider

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
+  <div id="slider-container"></div>
 
 </body>
 
 </html>
 
 <script src="/libraries/svg-graph-library.js"></script>
+<script src="/javaScripts/draw.js"></script>
 <script src="/javaScripts/graph.js"></script>
