--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="style.css">
 
   <title>Reversible Reaction in an Adiabatic PFR</title>
 </head>
 
 <body>
   <div id="slider-container"></div>
+  <div id="graph-container"></div>
 
 </body>
 
 </html>
 
-<script src="/libraries/svg-graph-library.js"></script>
-<script src="/javaScripts/draw.js"></script>
-<script src="/javaScripts/graph.js"></script>
+<script src="libraries/svg-graph-library.js"></script>
+<script src="javaScripts/draw.js"></script>
+<script src="javaScripts/graph.js"></script>
