--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 </head>
 
 <body>
-  <div id="slider-container"></div>
+  <div class="info-bar">
+    <h1>Reversible Reaction in an Adiabatic Plug-Flow Reactor</h1>
+  </div>
   <div id="graph-container"></div>
 
 </body>
 
 </html>
 
-<script src="libraries/svg-graph-library.js"></script>
 <script src="javaScripts/draw.js"></script>
+<script src="libraries/svg-graph-library.js"></script>
 <script src="javaScripts/graph.js"></script>
