--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- P5 CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script> -->
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
@@ -17,6 +17,10 @@
 <body>
   <div class="info-bar">
     <h1>Reversible Reaction in an Adiabatic Plug-Flow Reactor</h1>
+    <input id="molar-slider" type="range" min="0" max="1" value=".2" step=".01" oninput="updateMolarRatio(this.value)">
+    <p id="molarRatioValue">Molar Ratio of Inert to Reactant in Feed: .20</p>
+    <input id="temperature-slider" type="range" min="300" max="400" value="350" step="1" oninput="updateFeedTemperature(this.value)">
+    <p id="temperatureValue">Feed Temperature: 350 (K)</p>
   </div>
   <div id="graph-container"></div>
 
