--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
 </head>
 
 <body>
-  <div class="info-bar">
+  <div class="nav-bar">
     <h1>Reversible Reaction in an Adiabatic Plug-Flow Reactor</h1>
-    <input id="molar-slider" type="range" min="0" max="1" value=".2" step=".01" oninput="updateMolarRatio(this.value)">
-    <p id="molarRatioValue">Molar Ratio of Inert to Reactant in Feed: .20</p>
-    <input id="temperature-slider" type="range" min="300" max="400" value="350" step="1" oninput="updateFeedTemperature(this.value)">
-    <p id="temperatureValue">Feed Temperature: 350 (K)</p>
+    <div class="buttons-container">
+      <button type="button" class="btn btn-primary">Directions</button>
+      <button type="button" class="btn btn-primary">Details</button>
+      <button type="button" class="btn btn-primary">About</button>
+    </div>
+    <div class="sliders-container">
+      <input id="molar-slider" type="range" min="0" max="1" value=".2" step="0.01" oninput="updateMolarRatio(this.value)">
+      <p id="molarRatioValue">Molar Ratio of Inert to Reactant in Feed: .20</p>
+      <input id="temperature-slider" type="range" min="300" max="400" value="350" step="1" oninput="updateFeedTemperature(this.value)">
+      <p id="temperatureValue">Feed Temperature: 350 (K)</p>
+    </div>
   </div>
   <div id="graph-container"></div>
 
