--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- P5 CDN -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script> -->
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
@@ -15,12 +17,13 @@
 </head>
 
 <body>
+  <div class="overlay close-modal-toggle hide"></div>
   <div class="nav-bar">
     <h1>Reversible Reaction in an Adiabatic Plug-Flow Reactor</h1>
     <div class="buttons-container">
-      <button type="button" class="btn btn-primary">Directions</button>
-      <button type="button" class="btn btn-primary">Details</button>
-      <button type="button" class="btn btn-primary">About</button>
+      <button type="button" class="btn btn-primary" id="directions-button">Directions</button>
+      <button type="button" class="btn btn-primary" id="details-button">Details</button>
+      <button type="button" class="btn btn-primary" id="about-button">About</button>
     </div>
     <div class="sliders-container">
       <input id="molar-slider" type="range" min="0" max="1" value=".2" step="0.01" oninput="updateMolarRatio(this.value)">
@@ -30,11 +33,16 @@
     </div>
   </div>
   <div id="graph-container"></div>
+  <div class="directions-container close-modal hide">
+    <div class="btn btn-danger btn-sm close-modal-toggle close-button">Close X</div>
+    <h2>Directions:</h2>
+    <p>A reversible reaction, A ⇌ B, takes place in an adiabatic plug-flow reactor (PFR). Select either an exothermic (\[CapitalDelta]H<0) or an endothermic (\[CapitalDelta]H>0) reaction. The black curve is the equilibrium conversion as a function of temperature from the van't Hoff equation. The blue line is conversion as a function of temperature from the adiabatic energy balance. The intersection of the curve and the line is the conversion at equilibrium (Subscript[X, e]) and the adiabatic temperature at equilibrium (Subscript[T, e]). You can vary the feed temperature and the molar ratio of inert to reactant in the feed.</p>
+  </div>
 
 </body>
 
 </html>
 
-<script src="javaScripts/draw.js"></script>
+<script src="javaScripts/buttons.js"></script>
 <script src="libraries/svg-graph-library.js"></script>
 <script src="javaScripts/graph.js"></script>
