details, about modals

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
     <h2>Directions:</h2>
     <p>A reversible reaction, A ⇌ B, takes place in an adiabatic plug-flow reactor (PFR). Select either an exothermic (\[CapitalDelta]H<0) or an endothermic (\[CapitalDelta]H>0) reaction. The black curve is the equilibrium conversion as a function of temperature from the van't Hoff equation. The blue line is conversion as a function of temperature from the adiabatic energy balance. The intersection of the curve and the line is the conversion at equilibrium (Subscript[X, e]) and the adiabatic temperature at equilibrium (Subscript[T, e]). You can vary the feed temperature and the molar ratio of inert to reactant in the feed.</p>
   </div>
+  <div class="details-container close-modal hide">
+    <div class="btn btn-danger btn-sm close-modal-toggle close-button">Close X</div>
+    <h2>Details:</h2>
+    <p>H2O ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac Fe2O3 nisi. Sed aliquet aliquam urna, ut fermentum metus FeSO4 in. Quisque fermentum, MgSO4 quis cursus laoreet, arcu nisi interdum quam, in luctus nunc nisi et turpis. Integer rhoncus CuSO4 augue ac ligula aliquam, in aliquam velit dapibus. Aenean sollicitudin, NH4Cl arcu in laoreet dictum, nisi ligula ultrices quam, nec lacinia ligula turpis vel elit. Fusce aliquet, CO2 eget mollis scelerisque, ligula purus placerat odio, vitae fermentum ipsum arcu ut arcu.</p>
+  </div>
+  <div class="about-container close-modal hide">
+    <div class="btn btn-danger btn-sm close-modal-toggle close-button">Close X</div>
+    <h2>About:</h2>
+    <p>H2O ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac Fe2O3 nisi. Sed aliquet aliquam urna, ut fermentum metus FeSO4 in. Quisque fermentum, MgSO4 quis cursus laoreet, arcu nisi interdum quam, in luctus nunc nisi et turpis. Integer rhoncus CuSO4 augue ac ligula aliquam, in aliquam velit dapibus. Aenean sollicitudin, NH4Cl arcu in laoreet dictum, nisi ligula ultrices quam, nec lacinia ligula turpis vel elit. Fusce aliquet, CO2 eget mollis scelerisque, ligula purus placerat odio, vitae fermentum ipsum arcu ut arcu.</p>
+  </div>
 
 </body>
 
