--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p>X<sub>EB</sub> = &Epsilon;&alpha;Cp(T - T<sub>f</sub>)/-∆H </p>
     <p>where X<sub>e</sub> is the equilibrium conversion, X<sub>EB</sub> is the conversion calculated from the energy balance, &alpha; is the ratio in the feed of total mols/mols of reactant, Cp is the heat capacity (J/[mol K]) of both the reactant and the inert, and T<sub>f</sub> is the feed temperature (K).</p>
     <p>References:</p>
-    <p>[1] H. S. Fogler, Essentials of Chemical Reaction Engineering, Upper Saddle River, NJ: Prentice Hall, 2011 pp. 503\[Dash]505.</p>
+    <p>[1] H. S. Fogler, Essentials of Chemical Reaction Engineering, Upper Saddle River, NJ: Prentice Hall, 2011 pp. 503 - 505.</p>
     <p>[2] Reversible Reaction in an Adiabatic Plug-Flow Reactor. <a href="https://learncheme.com/simulations/kinetics-reactor-design/reversible-reaction-in-an-adiabatic-pfr/" target="_blank" rel="noopener noreferrer">https://learncheme.com/simulations/kinetics-reactor-design/reversible-reaction-in-an-adiabatic-pfr/</a></p>
   </div>
   <div class="about-container close-modal hide">
